--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,16 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+
+# Ignore all files in the .idea directory
+.idea/
+
+# Optionally, you can also ignore other common files and directories specific to Java projects
+# Ignore target directory
+target/
+
+# Ignore build directory
+build/
+
+# Ignore Maven wrapper files
+.mvn/
